src/components/streaks/Streak.css
.streak {
  width: 6vw;
  aspect-ratio: 10 / 13;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.streak .streak-container {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.streak .streak-bg {
  width: 100%;
  aspect-ratio: 1 / 1;
  border-radius: calc((1vw + 1vh)/3);
}

.streak .streak-edit-btn,
.streak .streak-delete-btn {
  position: absolute;
  top: 0;
  width: 25%;
  aspect-ratio: 1 / 1;
  border: none;
  font-size: 2vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.streak .streak-edit-btn {
  right: 0;
  border-top-right-radius: calc((1vw + 1vh)/3);
}

.streak .streak-delete-btn {
  left: 0;
  border-top-left-radius: calc((1vw + 1vh)/3);
}

.streak span,
.streak .streak-edit-btn,
.streak .streak-delete-btn {
  font-size: calc((1vw + 1vh)/1.5);
}

